--- a/makeWave/GNUmakefile
+++ b/makeWave/GNUmakefile
@@ -1,7 +1,7 @@
 # Makefile for mkwave.c
 
 makewave: ../include/wave.c makewave.c
-	gcc -Wall -o makewave ../include/wave.c makewave.c -lm
+	gcc -Wall ../include/wave.c makewave.c -lm -o makewave.out
 
 copy: ../include/wave.c copy.c
 	gcc -Wall ../include/wave.c copy.c -lm -o copy.out
@@ -13,10 +13,10 @@ intro: ../include/wave.c ../include/file.c intro.c
 	gcc -Wall ../include/wave.c ../include/file.c intro.c -lm
 
 adjust_volume: ../include/wave.c ../include/file.c adjust_volume.c
-	gcc -Wall ../include/wave.c ../include/file.c adjust_volume.c -lm -o adjust_volume.out
+	gcc -Wall ../include/wave.c adjust_volume.c -lm -o adjust_volume.out
 
 compressor: ../include/wave.c ../include/file.c compressor.c
-	gcc -Wall ../include/wave.c ../include/file.c compressor.c -lm -o compressor.out
+	gcc -Wall ../include/wave.c compressor.c -lm -o compressor.out
 
 doublespeed: ../include/wave.c
 	gcc -Wall ../include/wave.c doublespeed.c -lm
